Add the read-only web GUI
